--- a/copy/vue/index.html
+++ b/copy/vue/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="icon" href="/favicon.ico" />
     <title>玩運彩預測平台</title>
   </head>
   <body>
